force-app/main/default/objects/CheckResult__c/CheckResult__c.object-meta.xml
<CustomObject>
    <label>Check Result</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Check Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>