force-app/main/default/objects/CheckResult__c/fields/Inspection_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Product Item</label>
    <referenceTo>Inspection_Product_Item__c</referenceTo>
    <relationshipLabel>Check Results</relationshipLabel>
    <relationshipName>Check_Results</relationshipName>
    <type>Lookup</type>
</CustomField>