force-app/main/default/objects/CheckResult__c/fields/InspectorDailyReport__c.field-meta.xml
<CustomField>
    <fullName>InspectorDailyReport__c</fullName>
    <label>InspectorDailyReport</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Check Results</relationshipLabel>
    <relationshipName>Check_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>