force-app/main/default/objects/CheckResult__c/fields/InspectorReportName__c.field-meta.xml
<CustomField>
    <fullName>InspectorReportName__c</fullName>
    <formula>InspectorDailyReport__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Report Name</label>
    <type>Text</type>
</CustomField>