force-app/main/default/objects/CheckResult__c/fields/Max_Scores__c.field-meta.xml
<CustomField>
    <fullName>Max_Scores__c</fullName>
    <label>Max Scores</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>