force-app/main/default/objects/CheckResult__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>用于获取Inspection_Product_Item__c表中的产品线大类</description>
    <formula>If(ISBLANK(Text(Inspection_Product_Item__r.Product_Line__c)), Text(Inspection_Product_Item__r.Type__c),Text(Inspection_Product_Item__r.Product_Line__c))</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>