force-app/main/default/objects/CheckResult__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromoterDailyReport</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Check Results</relationshipLabel>
    <relationshipName>Check_Results</relationshipName>
    <type>Lookup</type>
</CustomField>