force-app/main/default/objects/CheckResult__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <formula>InspectorDailyReport__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>