force-app/main/default/objects/CheckResult__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF( CheckItem__r.IsYesOrNo__c , 
IF( Scores__c == -1 , &apos;&apos; , IF( Scores__c == 0 , &apos;No&apos; , &apos;Yes&apos;)),  
TEXT( Scores__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>