force-app/main/default/objects/CheckResult__c/fields/Sampling_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sampling Inspection</label>
    <referenceTo>Sampling_Inspection__c</referenceTo>
    <relationshipLabel>Check Results</relationshipLabel>
    <relationshipName>Check_Results</relationshipName>
    <type>Lookup</type>
</CustomField>