force-app/main/default/objects/CheckResult__c/fields/Scores__c.field-meta.xml
<CustomField>
    <fullName>Scores__c</fullName>
    <label>Scores</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>